moved data to be accessible for all sessions, updated session 1 code to new path

--- a/May4_1330_tidyverse-modeling/tidyverse-model.Rmd
+++ b/May4_1330_tidyverse-modeling/tidyverse-model.Rmd
@@ -17,7 +17,7 @@ Consistent workflow for both data wrangling and statistical modeling in the tidy
 
 ```{r, warning=FALSE, message=FALSE}
 library(tidyverse)
-load("data/adv-R-twin.RData")
+load("../data/adv-R-twin.RData")
 ```
 
 
