--- a/May3_1530_case/case.Rmd
+++ b/May3_1530_case/case.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(message=FALSE, warning=FALSE)
 
 
 ```{r, warning=FALSE, message=FALSE}
-load("data/adv-R-twin.RData")
+load("../data/adv-R-twin.RData")
 ```
 
 ```{r, fig.width=8, fig.height=5, echo=FALSE, fig.align='center', warning=FALSE, message=FALSE}
