--- a/May4_0900_tidyverse-data-wrangling/tidyverse-wrangling.Rmd
+++ b/May4_0900_tidyverse-data-wrangling/tidyverse-wrangling.Rmd
@@ -18,7 +18,7 @@ Efficient data manipulation and transformation in the tidyverse.
 
 ```{r, warning=FALSE, message=FALSE}
 library(tidyverse)
-load("data/adv-R-twin.RData")
+load("../data/adv-R-twin.RData")
 ```
 
 
